changed ingrediens on soups json and fix z-index problem on bottom nav

--- a/src/app/components/bottom-nav/bottom-nav.component.scss
+++ b/src/app/components/bottom-nav/bottom-nav.component.scss
@@ -1,77 +1,71 @@
-$primary: #32936F;
+$primary: #32936f;
 
-.container{
+.container {
+  margin: 0px;
+  background: $primary;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  z-index: 1;
+
+  ul {
+    padding: 0;
     margin: 0px;
-    background: $primary;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-    
-   
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+    align-items: flex-end;
+    padding: 10px;
+  }
 
-    
-    ul{
-        padding: 0;
-        margin: 0px;
-        display: flex;
-         list-style: none;
-         justify-content: space-around;
-         align-items: flex-end;
-         padding: 10px;;
+  a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    font-size: 14px;
+    color: white;
+    text-decoration: none;
+
+    p {
+      margin: 0;
+      margin-top: 3px;
     }
+  }
 
-    a{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-end;
-        font-size: 14px;
-        color: white;
-        text-decoration: none;
-        
-        p{
-            margin:0;
-            margin-top: 3px;
-           
-        }
+  #support-logo {
+    min-height: 23px;
+    width: 23px;
+  }
+
+  #soup-logo {
+    min-height: 23px;
+    width: 25px;
+  }
+
+  .text-circle-wrapper {
+    display: flex;
+    align-items: center;
+  }
+
+  .circle {
+    /* border:1px solid #fff;    */
+    background: rgb(255 255 255 / 91%);
+    border-radius: 50%;
+    width: 17px;
+    height: 17px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 5px;
+    position: absolute;
+    margin-left: 17px;
+    margin-bottom: 17px;
+
+    p {
+      color: black;
+      margin: 0px;
+      font-size: 70%;
     }
-
-
-    #support-logo{
-        min-height: 23px;
-        width: 23px;;
-    }
-    
-    #soup-logo{
-        min-height: 23px;
-        width: 25px;;
-    }
-
-    .text-circle-wrapper{
-        display: flex;
-        align-items: center;
-    }
-
-    .circle{
-        /* border:1px solid #fff;    */ 
-       background: rgb(255 255 255 / 91%); 
-        border-radius:50%;
-        width: 17px;
-        height: 17px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-left: 5px;
-        position: absolute;
-        margin-left: 17px;
-        margin-bottom: 17px;
-
-        p{
-            color: black;
-            margin: 0px;
-            font-size: 70%;
-        }
-    }
-
-    
+  }
 }
