--- a/src/app/pages/soup/soup.component.scss
+++ b/src/app/pages/soup/soup.component.scss
@@ -23,7 +23,7 @@
 
   .info-boxes {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 
     .ingredients {
       box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1),
@@ -33,9 +33,15 @@
       /*  flex-wrap: wrap; */
       align-items: center;
       background: #fff;
-      width: 40%;
+      width: 45%;
+      max-width: 200px;
       border-radius: 10px;
-      padding: 8px;
+      padding: 8spx;
+
+      .ingredients-text {
+        max-width: 80%;
+        word-wrap: break-word;
+      }
 
       h6 {
         margin: 5px;
@@ -45,7 +51,6 @@
         font-size: 80%;
         margin: 0px;
         overflow: hidden;
-        word-break: break-word;
       }
 
       img {
@@ -62,9 +67,13 @@
       align-items: center;
       justify-content: center;
       background: #fff;
-      width: 40%;
+      width: 45%;
+      max-width: 200px;
       border-radius: 10px;
       padding: 8px;
+
+      .nutritional-text {
+      }
 
       h6 {
         margin: 5px;
@@ -73,7 +82,6 @@
       p {
         font-size: 80%;
         margin: 0px;
-        align-self: flex-start;
       }
 
       img {
